--- a/starter-code/package.json
+++ b/starter-code/package.json
@@ -4,13 +4,23 @@
   "description": "As we now complete our MVC conversation, we can refactor our app to use good MVC separation of concerns.",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "Code Fellows",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.13.3",
-    "body-parser": "^1.15.2",
+    "body-parser": "^1.16.1",
+    "express": "^4.14.1",
+    "module": "^1.2.5",
     "pg": "^6.1.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rrustia/09-SQL-joins-relations/tree/ron"
+  },
+  "keywords": [
+    "SQL",
+    "joins"
+  ]
 }
